Add a quick example/test

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "duo": "^0.8.9"
+  }
 }
